Fixed php icon alignment, improved key skills

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -298,6 +298,10 @@ p {
   float: left!important
 }
 
+.php-icon {
+  margin-top: 1.5px;
+}
+
 #portfolio .portfolio-item .portfolio-info {
   opacity: 0;
   position: absolute;
